--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
     "three": "^0.172.0"
   },
   "scripts": {
-      "start": "react-scripts start",
-    
-      "build": "react-scripts build",
-    
-      "test": "react-scripts test",
-    
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
     "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
