--- a/package.json
+++ b/package.json
@@ -31,10 +31,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
-    "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
-    "worker-loader": "^3.0.8"
+    "tailwindcss": "^4.0.0"
   }
 }
