--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "cesium": "^1.125.0",
     "cra-template": "1.2.0",
     "leaflet": "^1.9.4",
